--- a/brunel_viz.ipynb
+++ b/brunel_viz.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install brunel\n",
+    "#!pip install brunel\n",
     "import pandas as pd\n",
     "import brunel"
    ]
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,19 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Row ID', 'Order ID', 'Order Date', 'Ship Date', 'Ship Mode',\n",
-      "       'Customer ID', 'Customer Name', 'Segment', 'Country', 'City', 'State',\n",
-      "       'Postal Code', 'Region', 'Product ID', 'Category', 'Sub-Category',\n",
-      "       'Product Name', 'Sales', 'Quantity', 'Discount', 'Profit'],\n",
-      "      dtype='object')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['Row ID', 'Order ID', 'Order Date', 'Ship Date', 'Ship Mode',\n",
+       "       'Customer ID', 'Customer Name', 'Segment', 'Country', 'City', 'State',\n",
+       "       'Postal Code', 'Region', 'Product ID', 'Category', 'Sub-Category',\n",
+       "       'Product Name', 'Sales', 'Quantity', 'Discount', 'Profit'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +87,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +135,8 @@
        "    \n",
        "</style>\n",
        "\n",
-       "<div id=\"controlsidf449094b-e8a0-11e8-8cc6-80000ba777b2\" class=\"brunel\"></div>\n",
-       "<svg id=\"visidf449094a-e8a0-11e8-adbe-80000ba777b2\" width=\"800\" height=\"300\"></svg>"
+       "<div id=\"controlside28d54ef-e8a2-11e8-a8ce-80000ba777b2\" class=\"brunel\"></div>\n",
+       "<svg id=\"viside28d54ee-e8a2-11e8-8b22-80000ba777b2\" width=\"800\" height=\"300\"></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -228,14 +231,14 @@
        "    chart.append('rect').attr('class', 'background').attr('width', geom.chart_right-geom.chart_left).attr('height', geom.chart_bottom-geom.chart_top);\r\n",
        "    var interior = chart.append('g').attr('class', 'interior zoomNone')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_inner)');\r\n",
+       "      .attr('clip-path', 'url(#clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_inner)');\r\n",
        "    interior.append('rect').attr('class', 'inner').attr('width', geom.inner_width).attr('height', geom.inner_height);\r\n",
        "    var gridGroup = interior.append('g').attr('class', 'grid');\r\n",
        "    var axes = chart.append('g').attr('class', 'axis')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')');\r\n",
        "    var legends = chart.append('g').attr('class', 'legend')\r\n",
        "      .attr('transform','translate(' + (geom.chart_right-geom.chart_left - 3) + ',' + 0 + ')');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_inner').append('rect')\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_inner').append('rect')\r\n",
        "      .attr('x', 0).attr('y', 0)\r\n",
        "      .attr('width', geom.inner_rawWidth+1).attr('height', geom.inner_rawHeight+1);\r\n",
        "\r\n",
@@ -254,15 +257,15 @@
        "\r\n",
        "    axes.append('g').attr('class', 'x axis')\r\n",
        "      .attr('transform','translate(0,' + geom.inner_rawHeight + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_haxis)');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_haxis').append('polyline')\r\n",
+       "      .attr('clip-path', 'url(#clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_haxis)');\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_haxis').append('polyline')\r\n",
        "      .attr('points', '-1,-1000, -1,-1 -5,5, -1000,5, -100,1000, 10000,1000 10000,-1000');\r\n",
        "    axes.select('g.axis.x').append('text').attr('class', 'title').text('Category').style('text-anchor', 'middle')\r\n",
        "      .attr('x',geom.inner_rawWidth/2)\r\n",
        "      .attr('y', geom.inner_bottom - 2.0).attr('dy','-0.27em');\r\n",
        "    axes.append('g').attr('class', 'y axis')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_vaxis)');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf449094a-e8a0-11e8-adbe-80000ba777b2_chart1_vaxis').append('polyline')\r\n",
+       "      .attr('clip-path', 'url(#clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_vaxis)');\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside28d54ee-e8a2-11e8-8b22-80000ba777b2_chart1_vaxis').append('polyline')\r\n",
        "      .attr('points', '-1000,-10000, 10000,-10000, 10000,' + (geom.inner_rawHeight+1) + ', -1,' + (geom.inner_rawHeight+1) + ', -1,' + (geom.inner_rawHeight+5) + ', -1000,' + (geom.inner_rawHeight+5) );\r\n",
        "    axes.select('g.axis.y').append('text').attr('class', 'title').text('Sum(Sales)').style('text-anchor', 'middle')\r\n",
        "      .attr('x',-geom.inner_rawHeight/2)\r\n",
@@ -495,7 +498,7 @@
        "\r\n",
        "// Call Code to Build the system ///////////////////////////////////////////////////////////////////\r\n",
        "\r\n",
-       "var v  = new BrunelVis('visidf449094a-e8a0-11e8-adbe-80000ba777b2');\r\n",
+       "var v  = new BrunelVis('viside28d54ee-e8a2-11e8-8b22-80000ba777b2');\r\n",
        "v.build(table1);\r\n",
        "\n",
        "    });\n",
@@ -505,7 +508,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -553,8 +556,8 @@
        "    \n",
        "</style>\n",
        "\n",
-       "<div id=\"controlsidf4c7af29-e8a0-11e8-9992-80000ba777b2\" class=\"brunel\"></div>\n",
-       "<svg id=\"visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2\" width=\"800\" height=\"600\"></svg>"
+       "<div id=\"controlside376cce3-e8a2-11e8-9875-80000ba777b2\" class=\"brunel\"></div>\n",
+       "<svg id=\"viside376cce2-e8a2-11e8-aaed-80000ba777b2\" width=\"800\" height=\"600\"></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -649,14 +652,14 @@
        "    chart.append('rect').attr('class', 'background').attr('width', geom.chart_right-geom.chart_left).attr('height', geom.chart_bottom-geom.chart_top);\r\n",
        "    var interior = chart.append('g').attr('class', 'interior zoomNone')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_inner)');\r\n",
+       "      .attr('clip-path', 'url(#clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_inner)');\r\n",
        "    interior.append('rect').attr('class', 'inner').attr('width', geom.inner_width).attr('height', geom.inner_height);\r\n",
        "    var gridGroup = interior.append('g').attr('class', 'grid');\r\n",
        "    var axes = chart.append('g').attr('class', 'axis')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')');\r\n",
        "    var legends = chart.append('g').attr('class', 'legend')\r\n",
        "      .attr('transform','translate(' + (geom.chart_right-geom.chart_left - 3) + ',' + 0 + ')');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_inner').append('rect')\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_inner').append('rect')\r\n",
        "      .attr('x', 0).attr('y', 0)\r\n",
        "      .attr('width', geom.inner_rawWidth+1).attr('height', geom.inner_rawHeight+1);\r\n",
        "\r\n",
@@ -674,15 +677,15 @@
        "\r\n",
        "    axes.append('g').attr('class', 'x axis')\r\n",
        "      .attr('transform','translate(0,' + geom.inner_rawHeight + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_haxis)');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_haxis').append('polyline')\r\n",
+       "      .attr('clip-path', 'url(#clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_haxis)');\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_haxis').append('polyline')\r\n",
        "      .attr('points', '-1,-1000, -1,-1 -5,5, -1000,5, -100,1000, 10000,1000 10000,-1000');\r\n",
        "    axes.select('g.axis.x').append('text').attr('class', 'title').text('Sales').style('text-anchor', 'middle')\r\n",
        "      .attr('x',geom.inner_rawWidth/2)\r\n",
        "      .attr('y', geom.inner_bottom - 2.0).attr('dy','-0.27em');\r\n",
        "    axes.append('g').attr('class', 'y axis')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_vaxis)');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2_chart1_vaxis').append('polyline')\r\n",
+       "      .attr('clip-path', 'url(#clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_vaxis)');\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside376cce2-e8a2-11e8-aaed-80000ba777b2_chart1_vaxis').append('polyline')\r\n",
        "      .attr('points', '-1000,-10000, 10000,-10000, 10000,' + (geom.inner_rawHeight+1) + ', -1,' + (geom.inner_rawHeight+1) + ', -1,' + (geom.inner_rawHeight+5) + ', -1000,' + (geom.inner_rawHeight+5) );\r\n",
        "    axes.select('g.axis.y').append('text').attr('class', 'title').text('Profit').style('text-anchor', 'middle')\r\n",
        "      .attr('x',-geom.inner_rawHeight/2)\r\n",
@@ -8522,7 +8525,7 @@
        "\r\n",
        "// Call Code to Build the system ///////////////////////////////////////////////////////////////////\r\n",
        "\r\n",
-       "var v  = new BrunelVis('visidf4c7af28-e8a0-11e8-8cb7-80000ba777b2');\r\n",
+       "var v  = new BrunelVis('viside376cce2-e8a2-11e8-aaed-80000ba777b2');\r\n",
        "v.build(table1);\r\n",
        "\n",
        "    });\n",
@@ -8532,7 +8535,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8550,7 +8553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -8580,8 +8583,8 @@
        "    \n",
        "</style>\n",
        "\n",
-       "<div id=\"controlsidf54829cb-e8a0-11e8-92fc-80000ba777b2\" class=\"brunel\"></div>\n",
-       "<svg id=\"visidf54829ca-e8a0-11e8-b901-80000ba777b2\" width=\"600\" height=\"600\"></svg>"
+       "<div id=\"controlside42e370b-e8a2-11e8-baa1-80000ba777b2\" class=\"brunel\"></div>\n",
+       "<svg id=\"viside42e370a-e8a2-11e8-ac34-80000ba777b2\" width=\"600\" height=\"600\"></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -8676,12 +8679,12 @@
        "    chart.append('rect').attr('class', 'background').attr('width', geom.chart_right-geom.chart_left).attr('height', geom.chart_bottom-geom.chart_top);\r\n",
        "    var interior = chart.append('g').attr('class', 'interior zoomNone')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf54829ca-e8a0-11e8-b901-80000ba777b2_chart1_inner)');\r\n",
+       "      .attr('clip-path', 'url(#clip_viside42e370a-e8a2-11e8-ac34-80000ba777b2_chart1_inner)');\r\n",
        "    interior.append('rect').attr('class', 'inner').attr('width', geom.inner_width).attr('height', geom.inner_height);\r\n",
        "    var gridGroup = interior.append('g').attr('class', 'grid');\r\n",
        "    var legends = chart.append('g').attr('class', 'legend')\r\n",
        "      .attr('transform','translate(' + (geom.chart_right-geom.chart_left - 3) + ',' + 0 + ')');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf54829ca-e8a0-11e8-b901-80000ba777b2_chart1_inner').append('rect')\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside42e370a-e8a2-11e8-ac34-80000ba777b2_chart1_inner').append('rect')\r\n",
        "      .attr('x', 0).attr('y', 0)\r\n",
        "      .attr('width', geom.inner_rawWidth+1).attr('height', geom.inner_rawHeight+1);\r\n",
        "    var scale_x = d3.scaleLinear(), scale_y = d3.scaleLinear();\r\n",
@@ -8909,7 +8912,7 @@
        "\r\n",
        "// Call Code to Build the system ///////////////////////////////////////////////////////////////////\r\n",
        "\r\n",
-       "var v  = new BrunelVis('visidf54829ca-e8a0-11e8-b901-80000ba777b2');\r\n",
+       "var v  = new BrunelVis('viside42e370a-e8a2-11e8-ac34-80000ba777b2');\r\n",
        "v.build(table1);\r\n",
        "\n",
        "    });\n",
@@ -8919,7 +8922,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8937,7 +8940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -8967,8 +8970,8 @@
        "    \n",
        "</style>\n",
        "\n",
-       "<div id=\"controlsidf5e10e69-e8a0-11e8-a6a3-80000ba777b2\" class=\"brunel\"></div>\n",
-       "<svg id=\"visidf5e10e68-e8a0-11e8-bf79-80000ba777b2\" width=\"800\" height=\"600\"></svg>"
+       "<div id=\"controlside4f4e43b-e8a2-11e8-827d-80000ba777b2\" class=\"brunel\"></div>\n",
+       "<svg id=\"viside4f4e43a-e8a2-11e8-a562-80000ba777b2\" width=\"800\" height=\"600\"></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -9063,12 +9066,12 @@
        "    chart.append('rect').attr('class', 'background').attr('width', geom.chart_right-geom.chart_left).attr('height', geom.chart_bottom-geom.chart_top);\r\n",
        "    var interior = chart.append('g').attr('class', 'interior zoomNone')\r\n",
        "      .attr('transform','translate(' + geom.inner_left + ',' + geom.inner_top + ')')\r\n",
-       "      .attr('clip-path', 'url(#clip_visidf5e10e68-e8a0-11e8-bf79-80000ba777b2_chart1_inner)');\r\n",
+       "      .attr('clip-path', 'url(#clip_viside4f4e43a-e8a2-11e8-a562-80000ba777b2_chart1_inner)');\r\n",
        "    interior.append('rect').attr('class', 'inner').attr('width', geom.inner_width).attr('height', geom.inner_height);\r\n",
        "    var gridGroup = interior.append('g').attr('class', 'grid');\r\n",
        "    var legends = chart.append('g').attr('class', 'legend')\r\n",
        "      .attr('transform','translate(' + (geom.chart_right-geom.chart_left - 3) + ',' + 0 + ')');\r\n",
-       "    vis.select('defs').append('clipPath').attr('id', 'clip_visidf5e10e68-e8a0-11e8-bf79-80000ba777b2_chart1_inner').append('rect')\r\n",
+       "    vis.select('defs').append('clipPath').attr('id', 'clip_viside4f4e43a-e8a2-11e8-a562-80000ba777b2_chart1_inner').append('rect')\r\n",
        "      .attr('x', 0).attr('y', 0)\r\n",
        "      .attr('width', geom.inner_rawWidth+1).attr('height', geom.inner_rawHeight+1);\r\n",
        "    var tree, expandState = [], collapseState = {};    // collapse state maps node IDs to true/false\r\n",
@@ -9365,7 +9368,7 @@
        "\r\n",
        "// Call Code to Build the system ///////////////////////////////////////////////////////////////////\r\n",
        "\r\n",
-       "var v  = new BrunelVis('visidf5e10e68-e8a0-11e8-bf79-80000ba777b2');\r\n",
+       "var v  = new BrunelVis('viside4f4e43a-e8a2-11e8-a562-80000ba777b2');\r\n",
        "v.build(table1);\r\n",
        "\n",
        "    });\n",
@@ -9375,7 +9378,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
